crates/tests/acl/fixtures/snapshots/acl_tests__tests__basic-ping.snap
---
source: crates/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    has_app_acl: false,
    allowed_commands: {
        "plugin:ping|ping": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: None,
            },
        ],
    },
    denied_commands: {},
    command_scope: {},
    global_scope: {},
}
