crates/tests/acl/fixtures/snapshots/acl_tests__tests__file-explorer.snap
---
source: crates/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    has_app_acl: false,
    allowed_commands: {
        "plugin:fs|read_dir": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: None,
            },
        ],
        "plugin:fs|read_file": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: None,
            },
        ],
    },
    denied_commands: {},
    command_scope: {},
    global_scope: {
        "fs": ResolvedScope {
            allow: [
                Map(
                    {
                        "path": String(
                            "$APPDATA",
                        ),
                    },
                ),
            ],
            deny: [],
        },
    },
}
