crates/tests/acl/fixtures/snapshots/acl_tests__tests__multiwebview.snap
---
source: crates/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    has_app_acl: false,
    allowed_commands: {
        "plugin:ping|ping": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                    },
                ],
                webviews: [
                    Pattern {
                        original: "child1",
                        tokens: [
                            Char(
                                'c',
                            ),
                            Char(
                                'h',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'l',
                            ),
                            Char(
                                'd',
                            ),
                            Char(
                                '1',
                            ),
                        ],
                        is_recursive: false,
                    },
                    Pattern {
                        original: "child2",
                        tokens: [
                            Char(
                                'c',
                            ),
                            Char(
                                'h',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'l',
                            ),
                            Char(
                                'd',
                            ),
                            Char(
                                '2',
                            ),
                        ],
                        is_recursive: false,
                    },
                ],
                scope_id: None,
            },
        ],
    },
    denied_commands: {},
    command_scope: {},
    global_scope: {},
    uri_scheme_access: [],
}
