crates/tests/acl/fixtures/snapshots/acl_tests__tests__multiwindow.snap
---
source: crates/tests/acl/src/lib.rs
expression: resolved
---
Resolved {
    has_app_acl: false,
    allowed_commands: {
        "plugin:fs|move": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: Some(
                    4,
                ),
            },
        ],
        "plugin:fs|read_dir": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: Some(
                    1,
                ),
            },
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: Some(
                    3,
                ),
            },
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: None,
            },
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "external",
                        tokens: [
                            Char(
                                'e',
                            ),
                            Char(
                                'x',
                            ),
                            Char(
                                't',
                            ),
                            Char(
                                'e',
                            ),
                            Char(
                                'r',
                            ),
                            Char(
                                'n',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'l',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: None,
            },
        ],
        "plugin:fs|read_file": [
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: Some(
                    2,
                ),
            },
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "main",
                        tokens: [
                            Char(
                                'm',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'i',
                            ),
                            Char(
                                'n',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: Some(
                    3,
                ),
            },
            ResolvedCommand {
                context: Local,
                windows: [
                    Pattern {
                        original: "external",
                        tokens: [
                            Char(
                                'e',
                            ),
                            Char(
                                'x',
                            ),
                            Char(
                                't',
                            ),
                            Char(
                                'e',
                            ),
                            Char(
                                'r',
                            ),
                            Char(
                                'n',
                            ),
                            Char(
                                'a',
                            ),
                            Char(
                                'l',
                            ),
                        ],
                        is_recursive: false,
                        has_metachars: false,
                    },
                ],
                webviews: [],
                scope_id: None,
            },
        ],
    },
    denied_commands: {},
    command_scope: {
        1: ResolvedScope {
            allow: [
                Map(
                    {
                        "path": String(
                            "$CONFIG/*",
                        ),
                    },
                ),
            ],
            deny: [],
        },
        2: ResolvedScope {
            allow: [
                Map(
                    {
                        "path": String(
                            "$CONFIG/*",
                        ),
                    },
                ),
            ],
            deny: [],
        },
        3: ResolvedScope {
            allow: [
                Map(
                    {
                        "path": String(
                            "$RESOURCE/**",
                        ),
                    },
                ),
                Map(
                    {
                        "path": String(
                            "$RESOURCE",
                        ),
                    },
                ),
            ],
            deny: [],
        },
        4: ResolvedScope {
            allow: [
                Map(
                    {
                        "path": String(
                            "$TEMP/*",
                        ),
                    },
                ),
            ],
            deny: [],
        },
    },
    global_scope: {
        "fs": ResolvedScope {
            allow: [
                Map(
                    {
                        "path": String(
                            "$APPDATA",
                        ),
                    },
                ),
                Map(
                    {
                        "path": String(
                            "$DOWNLOAD",
                        ),
                    },
                ),
                Map(
                    {
                        "path": String(
                            "$DOWNLOAD/**",
                        ),
                    },
                ),
            ],
            deny: [
                Map(
                    {
                        "path": String(
                            "$HOME",
                        ),
                    },
                ),
                Map(
                    {
                        "path": String(
                            "$HOME",
                        ),
                    },
                ),
            ],
        },
    },
}
